# data-science-piscine

./: Readme.md  requirements.txt
Python-0/: requirements.txt
Python-0/ex00/: Hello.py
Python-0/ex01/: format_ft_time.py
Python-0/ex02/: find_ft_type.py  test.py
Python-0/ex03/: NULL_not_found.py  test.py
Python-0/ex04/: whatis.py
Python-0/ex05/: building.py
Python-0/ex06/: filterstring.py  ft_filter.py
Python-0/ex07/: sos.py
Python-0/ex08/: Loading.py
Python-0/ex09/: README.md  ft_package.py  pyproject.toml  test.py
Python-1/: install.sh
Python-1/ex00/: give_bmi.py
Python-1/ex01/: array2D.py  test.py
Python-1/ex02/: load_image.py  test.py
Python-1/ex03/: load_image.py  zoom.py
Python-1/ex04/: load_image.py  rotate.py
Python-1/ex05/: pimp_image.py  test.py
Python-2/ex00/: 22Aug23.xlsx  load_csv.py  test.py
Python-2/ex01/: aff_life.py
Python-2/ex02/: aff_pop.py  load_csv.py
Python-2/ex03/: load_csv.py
