[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ft_package"
version = "0.0.1"
authors = [
  { name="JAKOH", email="jasonkwm13@gmail.com" },
]
description = "my first package for ex08"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.urls]
"Homepage" = "https://github.com/jasonkwm/data-science-piscine/tree/main/Python-0/ex08"
"Bug Tracker" = "https://github.com/jasonkwm/data-science-piscine/issues"